Fix wrong set for metronome beats type.
Don't write it as metronome tempo.

--- a/fp30remote.html
+++ b/fp30remote.html
@@ -264,8 +264,7 @@ const addressmap = {
                  length: 1 },
     0x0100021f: {name: 'metronome_beats',
                  length: 1,
-                 values: ["0 beats", "2 beats", "3 beats", "4 beats", "5 beats", "6 beats"],
-                 write: 'metronome_tempo' },
+                 values: ["0 beats", "2 beats", "3 beats", "4 beats", "5 beats", "6 beats"] },
     0x01000300: {name: 'dashboard_push_notification',
                  length: 2 },
     0x01000306: {name: 'dashboard_remote_control',
